--- a/index.html
+++ b/index.html
@@ -5,36 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="css/examples.css" type="text/css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500" rel="stylesheet">
 	<script src="js/lib/jquery.min.js"></script>	
 	<script src="js/lib/greensock/TweenMax.min.js"></script>
 	<script src="js/ScrollMagic.js"></script>
 	<script src="js/plugins/animation.gsap.min.js"></script>
 	<script src="js/plugins/debug.addIndicators.min.js"></script>
 <style>
+	body {font-family: 'Alegreya Sans', sans-serif; font-size: 18px;}
 	#inicio, #final {height: 100vh; display: flex; align-items: center;}
-	.scrollContent {background: url('../img/background.png') top center no-repeat;}
-	.scrollContent section { text-align: center; overflow: hidden;}
-	#live {height: 3190px;}
+	#live {background: url('../img/background.png') center 40px no-repeat; height: 3190px;}
+	#live h3 {color: #FFF; font-size: 30px; display: block; margin: 0; background-color: cadetblue;}
+	.scene { text-align: center; overflow: hidden;}
 
-
-@keyframes rotate {
-    from{transform: rotate(0deg);}
-    to{transform: rotate(360deg);}
-}
-
-@keyframes leftToRight {
-    0%{left: 100%;}
-    40%{left: -20%;}
-}
-
-@keyframes dune {
-	0% {transform:translate(calc(50% - 300px),0px) rotate(-360deg);}
-	10%, 100% {transform:translate(calc(50% + 2000px),0px) rotate(360deg);}
-}
+@keyframes rotate {from{transform: rotate(0deg);} to{transform: rotate(360deg);}}
+@keyframes leftToRight {0%{left: 100%;} 40%{left: -20%;}}
+@keyframes dune {0% {transform:translate(calc(50% - 300px),0px) rotate(-360deg);} 10%, 100% {transform:translate(calc(50% + 2000px),0px) rotate(360deg);}}
 
 #rueda {width:400px; height:400px; position: relative; top:25px; left: calc(50% - 885px); background:url('../img/ferris.svg') no-repeat;
     animation: rotate 25s linear infinite;}
@@ -47,11 +35,14 @@
 #carroviejo {width:409.48px; height:102.66px; background: url('../img/carroviejo.svg')no-repeat; position: relative; top:-382px; left: 0px;}
 #pawnshop {width:698.57px; height:471.49px; background: url('../img/pawnshop.png')no-repeat; position: relative; top: -360px; left:calc(50% + 20px);}
 #goku {width:160.33px; height:100.59px; position: relative; top:-225px; left:100%; background:url('../img/goku.png') no-repeat; background-size: contain;}
-#ship {width:555.03px; height:297.30px; position: relative; top:145px; left:calc(50% - 605px); background:url('../img/ship.svg') no-repeat;}
-#shipshadow {width:555.03px; height:297.30px; position: relative; top:145px; left:calc(50% - 605px); background:url('../img/shipshadow.svg') no-repeat;}
+#ship {width:555.03px; height:297.30px; position: relative; top:-145px; left:calc(50% - 605px); background:url('../img/ship.svg') no-repeat;}
+#shipshadow {width:555.03px; height:297.30px; position: relative; top:405px; left:calc(50% - 605px); background:url('../img/shipshadow.svg') no-repeat;}
 #fogR {width:161.22px; height:126.50px; position: relative; top:-195px; left:calc(50% - 50px); background:url('../img/fogR.png') no-repeat;}
 #fogL {width:148.33px; height:91.55px; position: relative; top:-305px; left:calc(50% - 770px); background:url('../img/fogL.png') no-repeat;}
 #alina {width:197.66px; height:341.75px; position: relative; top:165px; left:calc(50% + 282px); background:url('../img/alina.png') no-repeat;}
+#chumlee {position: relative; top:-740px; left:calc(50% - 400px);}
+.pop {width: 350px; color: #FFF; background: #000;}
+
 </style>
 </head>
 <body>
@@ -64,7 +55,7 @@
 				// init controller
 				var controller = new ScrollMagic.Controller();
 			</script>
-			<section id="live">
+			<div id="live" class="scene">
 				<h3>Invitados Internacionales</h3>
 				<div id="ferris">
 					<div id="tower"></div>
@@ -72,47 +63,53 @@
 				</div>
 				<div id="sportcar"></div>
 				<div id="pawnshop"></div>
+				<div id="chumlee" class="pop">
+					Esta es una ventana donde aparece la informacion de Chumlee.
+				</div>
 				<div id="carroviejo"></div>
 				<div id="goku"></div>
 				<div id="freezer"></div>
-				<div id="ship"></div>
 				<div id="shipshadow"></div>
+				<div id="ship"></div>
 				<div id="fogR"></div>
 				<div id="fogL"></div>
 				<div id="dune"></div>
 				<div id="alina"></div>
 				<script>
-					var scene = new ScrollMagic.Scene({triggerElement: "#pawnshop", duration: 1200})
-					.setTween("#carroviejo", 1, {left:'100%'})
+
+                var reveal = new TimelineMax()
+                    .add([
+						TweenMax.fromTo("#chumlee", 0.4, {left:"100%", opacity:0}, {left:"28%", opacity:1}),
+						TweenMax.to("#carroviejo", 1, {left: "100%", delay:0.4})
+                        ]);
+
+					var scene = new ScrollMagic.Scene({triggerElement: "#ferris", duration: 1200})
+					.setTween(reveal)
+					.addIndicators({name: "chum (duration: 1200)"}) // add indicators (requires plugin)
 					.addTo(controller);
 
 					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 1200})
 					.setTween("#goku", 1, {left:'0%', width:'10px'})
 					.addTo(controller);
 
-					var scene = new ScrollMagic.Scene({triggerElement: "#freezer", duration: 250})
-					.setTween(TweenMax.fromTo("#ship", 1, {top: "0px", opacity: 0}, {top: "145px", opacity: 1} ))
-					.addTo(controller);
+					
+					var freezer = new TimelineMax()
+						.add([
+								TweenMax.fromTo("#ship", 150, {top: "-405px", opacity: 0}, {top: "-145px", opacity: 1}),
+								TweenMax.fromTo("#shipshadow", 30, {opacity: 0.2}, {opacity: 1, delay: 50}),
+								TweenMax.fromTo(["#fogR", "#fogL" ], 1, {opacity: 0}, {opacity: 0.5, delay:80}),					
+								TweenMax.fromTo(["#fogR", "#fogL" ], 1, {opacity: 0.5}, {opacity: 0, delay:150})
+							]);
 
-					var scene = new ScrollMagic.Scene({triggerElement: "#freezer", duration: 250})
-					.setTween(TweenMax.fromTo("#shipshadow", 1, {opacity: 0.2}, {opacity: 1, delay: 20} ))
-					.addTo(controller);
-
-					var freezer = new TimelineMax({repeat: 1, yoyo: false})
-                    .add(TweenMax.fromTo(["#fogR", "#fogL" ], 1, {opacity: 0}, {opacity: 0.5, delay: 30}))
-                    .add(TweenMax.fromTo(["#fogR", "#fogL" ], 1, {opacity: 1}, {opacity: 0, delay:10}))
-
-					var scene = new ScrollMagic.Scene({triggerElement: "#freezer", duration: 400})
+					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 700})
 					.setTween(freezer)
-					.addIndicators({name: "fog (duration: 400)"}) // add indicators (requires plugin)
 					.addTo(controller);
 
 					var scene = new ScrollMagic.Scene({triggerElement: "#alina", duration: 200})
 					.setTween(TweenMax.fromTo("#alina", 1, {opacity: 0}, {opacity: 1} ))
-					.addIndicators({name: "alina (duration: 200)"}) // add indicators (requires plugin)
 					.addTo(controller);
 				</script>					
-			</section>						
+			</div>						
 			<section>
 				<div class="spacer s2"></div>
 				<div id="trigger1" class="spacer s0"></div>
