--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		#inicio, #final {height: 100vh; display: flex; align-items: center;}
 		#chum {background: url('../img/background.png') center top no-repeat; height: 965px;}
 		#freezer {background: url('../img/background.png') center -965px no-repeat; height: 1290px;}
+		#nicte {background: url('../img/background.png') center -2254px no-repeat; height: 1290px;}
 
 		.scene { text-align: center; overflow: hidden;}
 		#artInt {color: #FFF; font-size: 30px; display: block; margin: 0; background-color: cadetblue;}
@@ -30,7 +31,7 @@
 		#shipshadow {width:555.03px; height:297.30px; position: relative; top:750px; left:calc(50% - 605px); background:url('../img/shipshadow.svg') no-repeat;}
 		#fogR {width:161.22px; height:126.50px; position: relative; top:150px; left:calc(50% - 50px); background:url('../img/fogR.png') no-repeat;}
 		#fogL {width:148.33px; height:91.55px; position: relative; top:40px; left:calc(50% - 770px); background:url('../img/fogL.png') no-repeat;}
-		#alina {width:197.66px; height:341.75px; position: relative; top:165px; left:calc(50% + 282px); background:url('../img/alina.png') no-repeat;}
+		#alina {width:197.66px; height:341.75px; position: relative; top:252px; left:calc(50% + 282px); background:url('../img/alina.png') no-repeat;}
 		#chumlee {position: relative; top:-740px; left:calc(50% - 400px);}
 		#reyero {position: relative; top:-500px; left:calc(50% - 400px);}
 		.pop {background: #0078B5; color: #FFF; font-size: 16px; font-weight: 300; display: flex; align-items: center; text-align: left; width: 500px; border-radius: 25px; padding: 20px;}
@@ -140,7 +141,7 @@
 						
 				</script>
 			</div>
-			<div id="mex" class="scene">
+			<div id="nicte" class="scene">
 				<div id="alina"></div>
 				<script>
 					var scene = new ScrollMagic.Scene({triggerElement: "#alina", duration: 200})
