--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,500,700" rel="stylesheet">
 	<link href="https://lokeshdhakar.com/projects/lightbox2/css/lightbox.css" rel="stylesheet">
 	<link href="http://kenwheeler.github.io/slick/slick/slick.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="js/lib/greensock/TweenMax.min.js"></script>
@@ -47,19 +48,22 @@
 		.pop img {flex-shrink: 0; border: 1px solid #FFF; margin-right: 20px;}
 		.pop h2 {font-size: 26px;  font-weight: 700; margin: 0 0 15px;}
 		.pop p {margin: 0;}
-		.pop span {display: flex; margin-top: 20px; flex-direction: row; justify-content: space-evenly;}
-		.pop a {display: block; height: 35px; width: 35px; }
+		.pop span {display: flex; margin-top: 20px; flex-direction: row; justify-content: space-around;}
+		.pop a {display: block; font-size: 35px; text-decoration: none; color: #FFF;font-weight: 300;}
 		.pop .face {background: url('../img/facebook.svg') center no-repeat;}
 		.pop .inst {background: url('../img/instagram.svg') center no-repeat;}
 		.pop .twit {background: url('../img/twitter.svg') center no-repeat;}
 		.pop .tube {background: url('../img/youtube.svg') center no-repeat;}
 		#wcslogo {width: 100%; max-width: 460px; margin-bottom: 50px; }
 		#wcs section {width: 100%; max-width: 960px; margin-bottom:50px; }
+		#cosplay{height: 100vh;}
 
 		@keyframes rotate {from{transform: rotate(0deg);} to{transform: rotate(360deg);}}
 		@keyframes leftToRight {0%{left: 100%;} 40%{left: -20%;}}
 		@keyframes dune {0% {transform:translate(calc(50% - 300px),0px) rotate(-360deg);} 10%, 100% {transform:translate(calc(50% + 2000px),0px) rotate(360deg);}}
-
+		@keyframes move-twink-back {from {background-position:0 0;} to {background-position:-10000px 5000px;}}
+		.stars, .twinkling  {position: fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%; display:block;}
+		
 		#rueda {width:400px; height:400px; position: relative; top:25px; left: calc(50% - 885px); background:url('../img/ferris.svg') no-repeat;
 			animation: rotate 25s linear infinite;}
 		#sportcar {width:198px; height:47px; background:url('../img/sportcar.svg') no-repeat; position: relative; top:-310px; left: -100%;
@@ -78,6 +82,9 @@
 		.slick-slide {margin: 0 10px;}
 		.slick-slide img {width: 100%;}
 		.slick-slide a {color: #000; text-decoration:none;}
+
+		.stars {background:#000 url('../img/stars.png') repeat top center;z-index:-9999;}
+		.twinkling{background:transparent url('../img/twinkling.png') repeat top center; z-index:-9999; animation:move-twink-back 200s linear infinite;}
 
 		.topnav {overflow:hidden; background-color:#333; width: 100%; position: fixed; top: 0; z-index: 1000;}
 		.topnav a {float:left; display:block; color:#f2f2f2; text-align:center; padding:14px 16px; text-decoration:none; font-size:17px;}
@@ -165,8 +172,19 @@
 	<div id="content-wrapper">
 		<nav></nav>
 		<section id="inicio">
-			<h2>Pagina inicial</h2>
+			<h2>Logo</h2>
+			<h3>Conectate a la experiencia</h3>
+			<p>Domingo 5 de Mayo - 10am</p>
+			<p>Centro Nacional de Convenciones</p>
+			<p>San José, Costa Rica</p>
 		</section>
+		<div id="mainSocial">
+			<a href="#" class="fab fa-facebook-square"></a>
+			<a href="#" class="fab fa-instagram"></a>
+			<a href="#" class="fab fa-twitter"></a>
+			<a href="#" class="fab fa-youtube"></a>
+		</div>
+		<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="#">Plus Ultra!</a></div>
 		<div class="scrollContent">
 			<script>
 				// init controller
@@ -185,10 +203,10 @@
 						<h2>Austin "Chumlee" Russell</h2>
 						<p>Conocido por su pariticpacion en laLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
 						<span>
-							<a href="#" class="face"></a>
-							<a href="#" class="inst"></a>
-							<a href="#" class="twit"></a>
-							<a href="#" class="tube"></a>
+							<a href="#" class="fab fa-facebook-square"></a>
+							<a href="#" class="fab fa-instagram"></a>
+							<a href="#" class="fab fa-twitter"></a>
+							<a href="#" class="fab fa-youtube"></a>
 						</span>
 					</div>
 				</div>
@@ -219,10 +237,10 @@
 						<h2>Gerardo Reyero</h2>
 						<p>Conocido por su pariticpacion en laLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
 						<span>
-							<a href="#" class="face"></a>
-							<a href="#" class="inst"></a>
-							<a href="#" class="twit"></a>
-							<a href="#" class="tube"></a>
+							<a href="#" class="fab fa-facebook-square"></a>
+							<a href="#" class="fab fa-instagram"></a>
+							<a href="#" class="fab fa-twitter"></a>
+							<a href="#" class="fab fa-youtube"></a>
 						</span>
 					</div>
 				</div>				
@@ -257,10 +275,10 @@
 						<h2>Alina Nicte</h2>
 						<p>Conocido por su pariticpacion en laLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
 						<span>
-							<a href="#" class="face"></a>
-							<a href="#" class="inst"></a>
-							<a href="#" class="twit"></a>
-							<a href="#" class="tube"></a>
+							<a href="#" class="fab fa-facebook-square"></a>
+							<a href="#" class="fab fa-instagram"></a>
+							<a href="#" class="fab fa-twitter"></a>
+							<a href="#" class="fab fa-youtube"></a>
 						</span>
 					</div>
 				</div>				
@@ -299,6 +317,11 @@
 					<div><a href="/img/foto/dinamarca.jpg" data-lightbox="cosplay"><img src="/img/th-dinamarca.jpg" alt="Dinamarca"><span>Team Dinamarca 2018</span></a></div>
 					<div><a href="/img/foto/japon.jpg" data-lightbox="cosplay"><img src="/img/th-japon.jpg" alt="Japon"><span>Team Japón 2018</span></a></div>
 				</div>
+			</div>
+			<div id="cosplay">
+				<div class="stars"></div>
+				<div class="twinkling"></div>
+				
 			</div>
 			<div>
 				<div class="spacer s2"></div>
