--- a/index.html
+++ b/index.html
@@ -320,8 +320,13 @@
 			</div>
 			<div id="cosplay">
 				<div class="stars"></div>
-				<div class="twinkling"></div>
-				
+				<!-- <div class="twinkling"></div> -->
+				<h2>Cosplay Rising Stars</h2>
+				<div class="cosplayrs">
+					<div><img src="x" alt=""></div>
+				</div>
+
+
 			</div>
 			<div>
 				<div class="spacer s2"></div>
