--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
 		.cosplayStars .slick-slide p {position: relative; top: -30px; right: 10%; text-align: end; font-size: 14px; font-weight: 500;}
 
 
-#nav {position: fixed; width: 100%; z-index: 999;}
-#nav ul {display: none; width: 100%; list-style: none; margin: 0px; padding: 0px;}
-#nav ul li a {display: block; padding: 1em; background: #333; color: white; text-decoration: none;}
-#nav ul li a:hover {background: #0078B5;}
-#nav ul li:last-of-type a {border-right: 0px;}
-#nav ul li ul li a {padding: 0.5em 0em 0.5em 2.5em;}
-#nav input.trigger { position: absolute; top: -9999px; left: -9999px;}
-#nav input.trigger:checked ~ ul, #nav input.trigger:checked ~ ul li ul {display: block !important;}
-#nav label { position: relative; display: block; min-height: 2em; padding: .45em; font-size: 1.1em; margin: 0; cursor: pointer; background: #005292; line-height: 2em; color: #bfe1fb;}
-#nav label:after {position: absolute; right: 1em; top: .2em; content: "\2261"; font-size: 1.8em; color: white;}
-@media (min-width: 48em) {
-  #nav input.trigger:checked ~ ul, #nav input.trigger:checked ~ ul li ul {display: flex; flex-direction: row; }
-}
-@media (min-width: 48em) {
-  #nav ul {display: flex; flex-direction: row;}
-  #nav ul li {position: relative; text-align: center; flex: 1;}
-  #nav ul li ul {display: none !important; position: absolute; top: 3.0625em; left: 0; display: block; z-index: 200;}
-  #nav ul li ul li {text-align: left;}
-  #nav ul li:hover > ul {display: block !important;}
-  #nav label {display: none;}
-}
-
+		#nav {position: fixed; width: 100%; z-index: 999;}
+		#nav ul {display: none; width: 100%; list-style: none; margin: 0px; padding: 0px;}
+		#nav ul li a {display: block; padding: 1em; background: #333; color: white; text-align:center; text-decoration: underline; font-weight:500; padding-top:25px;  }
+		#nav ul li a:hover {background: #0078B5;}
+		#nav ul li:last-of-type a {border-right: 0px;}
+		#nav ul li ul li a {text-align:center; /*padding: 0.5em 0em 0.5em 2.5em;*/ font-weight:300; text-decoration: none; padding: 4px;}
+		#nav input.trigger { position: absolute; top: -9999px; left: -9999px;}
+		#nav input.trigger:checked ~ ul, #nav input.trigger:checked ~ ul li ul {display: block !important;}
+		#nav label { position: relative; display: block; min-height: 2em; padding: .45em; font-size: 1.1em; margin: 0; cursor: pointer; background: #005292; line-height: 2em; color: #bfe1fb;}
+		#nav label:after {position: absolute; right: 1em; top: .2em; content: "\2261"; font-size: 1.8em; color: white;}
+		@media (min-width: 48em) {
+			#nav input.trigger:checked ~ ul, #nav input.trigger:checked ~ ul li ul {display: flex; flex-direction: row; }
+		}
+		@media (min-width: 48em) {
+			#nav ul {display: flex; flex-direction: row;}
+			#nav ul li {position: relative; text-align: center; flex: 1;}
+			#nav ul li a {font-weight:300; text-decoration: none; }
+			#nav ul li ul {display: none !important; position: absolute; top: 3.0625em; left: 0; display: block; z-index: 200;}
+			#nav ul li ul li {text-align: left;}
+			#nav ul li:hover > ul {display: block !important;}
+			#nav label {display: none;}
+		}
 	</style>
 </head>
 <body>
